fix profile statment and add my pic

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ liquid:
 # Your information
 email: atef_moh@sci.asu.edu.eg
 author: Atef Hares
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: Self learner and Software dvevloper
+avatar: "https://atefhares.github.io/assets/images/profile.png"
+profile: Self learner and Software developer
 #twitter_username: mratefhares
 github_username:  atefhares
 stack-overflow_username:  atef-hares
